--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     color: #0A5C2F !important;
 }
 
+.text-qadr-3 {
+    color: #7a7a7a !important;
+}
+
 /* Carousel */
 .carousel {
     margin-top: 80px !important;
@@ -95,6 +99,57 @@ body {
     color: #0A5C2F;
 }
 
+/* Artikel Detail */
+.link-artikel {
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.img-artikel-detail {
+    max-width: 100%;
+    max-height: 50% !important;
+}
+
+.la-wa {
+    background-color: #25d366;
+}
+
+.la-fb {
+    background-color: #3b5998;
+}
+
+.la-tw {
+    background-color: #1da1f2;
+}
+
+.la-ld {
+    background-color: #0077b5;
+}
+
+.la-pr {
+    background-color: #aaa;
+}
+
+.la-email {
+    background-color: #ea4335;
+}
+
+.link-artikel svg {
+    color: #FFF;
+}
+
+.txt-heading, .heading {
+    color: #7a7a7a;
+}
+
+.preview-link {
+    color: #cc3366;
+}
+
+.preview-link:hover {
+    color: #000;
+}
+
 /* Promo */
 .promo-card {
     background-color: #fff;
@@ -165,126 +220,31 @@ body {
 }
 
 /* Slider */
-.slide-container {
-    max-width: 1120px;
-    width: 100%;
-    padding: 40px 0;
-}
-
-.slide-content {
-    margin: 0 40px;
-    overflow: hidden;
-    border-radius: 25px;
-}
-
-.card {
-    border-radius: 25px;
-    background-color: #FFF;
-}
-
-.image-content,
-.card-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.image-content {
-    position: relative;
-    row-gap: 5px;
-}
-
-.overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: auto;
-    width: auto;
-    border-radius: 25px;
-}
-
-.overlay::after {
-    background-color: #FFF;
-}
-
-.card-image {
-    position: relative;
-    height: auto;
-    width: auto;
-    padding: 3px;
-}
-
-.card-image .card-img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-}
-
-.name {
-    font-size: 18px;
-    font-weight: 500;
-    color: #333;
-}
-
-.description {
-    font-size: 14px;
-    color: #707070;
-    text-align: center;
-}
-
-.button {
-    border: none;
-    font-size: 16px;
-    color: #FFF;
-    padding: 8px 16px;
-    background-color: #009444;
-    border-radius: 6px;
-    margin: 14px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.button:hover {
-    background: #009444;
-}
-
 .swiper-navBtn {
-    color: #6E93f7;
-    transition: color 0.3s ease;
-}
-
-.swiper-navBtn:hover {
-    color: #009444;
+    color: #000;
+    height: 50px;
+    width: 50px;
+    transform: translateY(-40%);
+    background: #fff;
+    border-radius: 50%;
 }
 
 .swiper-navBtn::before,
 .swiper-navBtn::after {
-    font-size: 35px;
-}
-
-.swiper-button-next {
-    right: 0;
-}
-
-.swiper-button-prev {
-    left: 0;
+    font-size: 24px;
 }
 
 .swiper-pagination-bullet {
-    background-color: #009444;
-    opacity: 1;
+    background-color: #333;
 }
 
-.swiper-pagination-bullet-active {
-    background-color: #009444;
+/* footer */
+footer {
+    margin-top: 20px;
+    background-color: #ECBE00;
 }
 
 @media screen and (max-width: 768px) {
-    .slide-content {
-        margin: 0 10px;
-    }
-
     .swiper-navBtn {
         display: none;
     }
@@ -293,12 +253,4 @@ body {
     .p-sekilas-pandang {
         font-size: 11px;
     }
-}
-
-/* footer */
-footer {
-    background-color: #ECBE00;
-}
-.maps-icon {
-    font-size: 15px;
 }
